# pyweather_com_cn

./: LICENSE  README.md  model.py  pyproject.toml  weather.py
weather_com_cn/: __init__.py  alarm.py  common.py  forecast.py  model.py
