[tool.poetry]
name = "pyweather_com_cn"
version = "0.1.0"
description = "爬取 weather.com.cn 上天气预报及气象预警的 python 库"
authors = ["Hagb (郭俊余) <hagb_green@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "bidict"
bidict = "bs4"
bs4 = "aenum"
aenum = "pydantic"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
